objects/ContractProductAlliancePartner__c.object
<CustomObject>
    <description>SFDC-4235: Alliances Validation Tracking - to check whether the customer has a license or not to use IHS data via partners</description>
    <fields>
        <fullName>AlliancePartnerApprovalDate__c</fullName>
        <description>SFDC-4235: Alliances Validation Tracking</description>
        <label>Alliance Partner Approval Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AlliancePartnerKey__c</fullName>
        <description>SFDC-4235: Alliances Validation Tracking duplicate record check</description>
        <formula>AlliancePartner__c + Contract__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alliance Partner Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlliancePartner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>SFDC-4235: Alliances Validation Tracking</description>
        <label>Alliance Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Global Alliance - Core, Global Alliance - HSP, Global Alliance - Prospect</value>
            </filterItems>
            <filterItems>
                <field>Account.DataGovernanceStatus__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract Product Alliance Partners</relationshipLabel>
        <relationshipName>ContractProductAlliancePartners</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>SFDC-4235: Alliances Validation Tracking</description>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Product Alliance Partners</relationshipLabel>
        <relationshipName>ContractProductAlliancePartners</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductGroupText__c</fullName>
        <description>SFDC-4235: Alliances Validation Tracking</description>
        <label>Product Group</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Contract Product Alliance Partner</label>
    <nameField>
        <displayFormat>CPAP-{000000}</displayFormat>
        <label>Contract Product Alliance Partner Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Product Alliance Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>